--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.9.3",
-        "@emotion/styled": "^11.9.3",
-        "@fontsource/roboto": "^4.5.7",
-        "@mui/icons-material": "^5.8.4",
-        "@mui/material": "^5.8.6",
-        "@mui/styled-engine-sc": "^5.8.0",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0",
+        "jest": "^28.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
